# xsens_pc_simple

./: CMakeLists.txt  readme.txt  xsens_pc_simple.kdev4
.kdev4/: xsens_pc.kdev4  xsens_pc_simple.kdev4
src/: main.cpp  xbusmessage.c  xbusmessage.h  xsens.cpp  xsens.h
